# workshop

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  todo.txt
engine/source/: CMakeLists.txt
engine/source/workshop.assets/: CMakeLists.txt  asset.cpp  asset.h  asset_cache.cpp  asset_cache.h  asset_importer.cpp  asset_importer.h  asset_loader.cpp  asset_loader.h  asset_manager.cpp  asset_manager.h
engine/source/workshop.assets/caches/: asset_cache_archive.h  asset_cache_disk.cpp  asset_cache_disk.h
engine/source/workshop.core/: CMakeLists.txt  entry.cpp  entry.h
engine/source/workshop.core.win32/: CMakeLists.txt  entry.cpp
engine/source/workshop.core.win32/containers/: string.cpp
engine/source/workshop.core.win32/debug/: debug.cpp
engine/source/workshop.core.win32/filesystem/: async_io_manager.cpp  async_io_manager.h  file.cpp  path_watcher.cpp
engine/source/workshop.core.win32/hashing/: guid.cpp
engine/source/workshop.core.win32/memory/: memory.cpp  memory_hooks.cpp
engine/source/workshop.core.win32/perf/: profile.cpp
engine/source/workshop.core.win32/platform/: platform.cpp
engine/source/workshop.core.win32/utils/: windows_headers.h
engine/source/workshop.core/app/: app.cpp  app.h
engine/source/workshop.core/async/: async.cpp  async.h  task_scheduler.cpp  task_scheduler.h
engine/source/workshop.core/containers/: byte_queue.cpp  byte_queue.h  command_queue.cpp  command_queue.h  json.cpp  json.h  memory_heap.cpp  memory_heap.h  oct_tree.cpp  oct_tree.h  sparse_vector.h  string.cpp  string.h
engine/source/workshop.core/cvar/: core_cvars.cpp  core_cvars.h  cvar.cpp  cvar.h  cvar_config_ast.cpp  cvar_config_ast.h  (+8 more)
engine/source/workshop.debug_menu/: CMakeLists.txt  debug_menu.cpp  debug_menu.h
engine/source/workshop.editor/: CMakeLists.txt
engine/source/workshop.engine/: CMakeLists.txt
engine/source/workshop.game_framework/: CMakeLists.txt
engine/source/workshop.input_interface/: CMakeLists.txt  input_interface.cpp  input_interface.h
engine/source/workshop.input_interface.sdl/: CMakeLists.txt  sdl_input_interface.cpp  sdl_input_interface.h
engine/source/workshop.physics_interface/: CMakeLists.txt  physics_cvars.cpp  physics_cvars.h  physics_interface.cpp  physics_interface.h  pi_body.h  pi_types.h  pi_world.h
engine/source/workshop.physics_interface.jolt/: CMakeLists.txt  jolt_physics_interface.cpp  jolt_physics_interface.h  jolt_pi_body.cpp  jolt_pi_body.h  jolt_pi_interface.cpp  jolt_pi_interface.h  jolt_pi_job_system.cpp  jolt_pi_job_system.h  jolt_pi_world.cpp  jolt_pi_world.h
engine/source/workshop.platform_interface/: CMakeLists.txt  platform_interface.cpp  platform_interface.h
engine/source/workshop.platform_interface.sdl/: CMakeLists.txt  sdl_platform_interface.cpp  sdl_platform_interface.h
engine/source/workshop.render_interface/: CMakeLists.txt  render_command_list.h  render_command_queue.h  render_fence.h  render_interface.cpp  render_interface.h  render_shader_compiler.h  render_swapchain.h  render_target.h  render_types.h  ri_buffer.h  ri_command_list.h  ri_command_queue.h  ri_fence.h  ri_interface.cpp  ri_interface.h  ri_layout_factory.cpp  ri_layout_factory.h  ri_param_block.cpp  ri_param_block.h  ri_param_block_archetype.h  ri_pipeline.h  ri_query.h  ri_raytracing_blas.h  ri_raytracing_tlas.h  ri_sampler.h  ri_shader_compiler.h  ri_staging_buffer.h  ri_swapchain.h  ri_texture.h  ri_texture_compiler.h  ri_types.cpp  ri_types.h
engine/source/workshop.render_interface.dx12/: CMakeLists.txt  dx12_headers.h  dx12_render_command_list.cpp  dx12_render_command_list.h  dx12_render_command_queue.cpp  dx12_render_command_queue.h  dx12_render_descriptor_heap.cpp  dx12_render_descriptor_heap.h  dx12_render_fence.cpp  dx12_render_fence.h  dx12_render_interface.cpp  dx12_render_interface.h  dx12_render_shader_compiler.cpp  dx12_render_shader_compiler.h  dx12_render_swapchain.cpp  dx12_render_swapchain.h  dx12_render_target.cpp  dx12_render_target.h  dx12_ri_buffer.cpp  dx12_ri_buffer.h  dx12_ri_command_list.cpp  dx12_ri_command_list.h  dx12_ri_command_queue.cpp  dx12_ri_command_queue.h  dx12_ri_descriptor_heap.cpp  dx12_ri_descriptor_heap.h  dx12_ri_descriptor_table.cpp  dx12_ri_descriptor_table.h  dx12_ri_fence.cpp  dx12_ri_fence.h  dx12_ri_interface.cpp  dx12_ri_interface.h  dx12_ri_layout_factory.cpp  dx12_ri_layout_factory.h  dx12_ri_param_block.cpp  dx12_ri_param_block.h  dx12_ri_param_block_archetype.cpp  dx12_ri_param_block_archetype.h  dx12_ri_pipeline.cpp  dx12_ri_pipeline.h  (+28 more)
engine/source/workshop.renderer/: CMakeLists.txt  common_types.h  render_batch_manager.cpp  render_batch_manager.h  render_command_queue.cpp  render_command_queue.h  render_cvars.cpp  render_cvars.h  render_effect.cpp  render_effect.h  render_effect_manager.cpp  render_effect_manager.h  render_graph.cpp  render_graph.h  render_imgui_manager.cpp  render_imgui_manager.h  render_object.cpp  render_object.h  render_options.cpp  render_options.h  render_output.cpp  render_output.h  render_param_block_manager.cpp  render_param_block_manager.h  render_pass.cpp  render_pass.h  render_pass_compute.h  render_pass_fullscreen.cpp  render_pass_fullscreen.h  render_pass_graphics.cpp  render_pass_graphics.h  render_resource_cache.cpp  render_resource_cache.h  render_scene_manager.cpp  render_scene_manager.h  render_scene_object.h  render_system.cpp  render_system.h  render_texture_streamer.cpp  render_texture_streamer.h  (+7 more)
engine/source/workshop.window_interface/: CMakeLists.txt  window.cpp  window.h  window_interface.cpp  window_interface.h
engine/source/workshop.window_interface.sdl/: CMakeLists.txt  sdl_window.cpp  sdl_window.h  sdl_window_interface.cpp  sdl_window_interface.h
engine/source/workshop.windowing/: CMakeLists.txt  window.cpp  window.h  windowing.cpp  windowing.h
engine/source/workshop.windowing.sdl/: CMakeLists.txt  sdl_window.cpp  sdl_window.h  sdl_windowing.cpp  sdl_windowing.h
games/: CMakeLists.txt
games/example/assets/: game.config
games/example/source/: CMakeLists.txt
games/roguelike/source/: CMakeLists.txt
(+2317 files in other folders)
